--- a/doc/paper_ms_method_HSCY1/sparse_PointMass_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_PointMass_results.tex
@@ -16,9 +16,9 @@ $\hat{w}=1/\abs{\hat{x}^{\rm{ls}}_{\rm{sm}}}^\tau$.
 
 As demonstrated in Figure \ref{fig_PM3D}, the mass reconstructions with the
 point mass dictionary tend to assign masses to several different redshift bins
-in the neighboring region of the halo's center.  In contrast, as demonstrated in
+in the neighboring region of the halo center.  In contrast, as demonstrated in
 Figure \ref{fig_NFW3D}, the NFW dictionary manages to perform consistent mass
-reconstructions.  We think the problem of the point mass dictionary originates
+reconstructions. The problem of the point mass dictionary presumably originates
 from the fact that the profile of the point mass atom in the transverse plane
 is much more compact than the profile of the input halos, especially at low
 redshift.
@@ -39,8 +39,8 @@ redshift.
     the point mass dictionary. The penalization parameters are $\lambda=3.5$
     (left) and $\lambda=5.0$ (right).  The input halo mass is
     $M_{200}=10^{15.02} ~h^{-1}M_{\odot}$, and its redshift is $z=0.164$.  The
-    vertical direction is the line of sight direction. The boxes' lower
-    boundaries and upper boundaries of correspond to $z=0.01$ and $z=0.85$,
+    vertical direction is the line of sight direction. The lower boundaries and
+    the upper boundaries of the boxes correspond to $z=0.01$ and $z=0.85$,
     respectively.
     } \label{fig_PM3D}
 \end{figure*}
